--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "twitch-bot": "^1.3.5"
   },
   "scripts": {
-    "start": "node bot.js"
+    "bot": "node bot.js",
+    "query": "node db/fetchMessages.js"
   }
 }
